[package]
name = "star_stacker"
version = "0.1.0"
authors = ["BenSandeen <benjaminsandeen2016@u.northwestern.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#libraw = "0.1.1"
image = "0.22.2"
structopt = "0.3"
